@@ -26,9 +26,9 @@ site_map_about:
   article_id: 7
   section_id: 2
   position: 3
-unpublished_home:
+future_home:
   id: 6
-  article_id: 4
+  article_id: 5
   section_id: 1
   position: 1
 cupcake_welcome_home:
